--- a/html/routinesDAY4.html
+++ b/html/routinesDAY4.html
@@ -3,7 +3,7 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness</title>
-	<link rel="stylesheet" href="../css/css_routine.css"/>>
+	<link rel="stylesheet" href="../css/css_routineDAY4.css"/>>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 	<h1>Choose Your Split</h1><br>
 	<p class="intro">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</p>
 
-	<p class="split">3-Day Split</p>
+	<p class="split">4-Day Split</p>
 	<table class="content-table">
 		<thead>
 			<tr>
@@ -36,111 +36,71 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr>
-				<td>Squat</td>
-				<td>Rest</td>
-				<td>Squat</td>
-				<td>Rest</td>
-				<td>Squat</td>
-				<td>Rest</td>
-				<td>Rest</td>
-			</tr>
 		<tr>
-			<td>Deadlift</td>
+			<td>Bench Press</td>
+			<td>Squat</td>
 			<td>Rest</td>
-			<td>Deadlift</td>
-			<td>Rest</td>
-			<td>Deadlift</td>
+			<td>Bench Press</td>
+			<td>Squat</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
-
-		<tr>
-			<td>Standing Calf Raise</td>
-			<td>Rest</td>
-			<td>Standing Calf Raise</td>
-			<td>Rest</td>
-			<td>Standing Calf Raise</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>Bench Press</td>
-			<td>Rest</td>
-			<td>Bench Press</td>
-			<td>Rest</td>
-			<td>Bench Press</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
 		<tr>
 			<td>Pull Ups</td>
+			<td>Deadlift</td>
 			<td>Rest</td>
 			<td>Pull Ups</td>
-			<td>Rest</td>
-			<td>Pull Ups</td>
+			<td>Deadlift</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>Overhead Press</td>
+			<td>Seated Leg Extension</td>
 			<td>Rest</td>
 			<td>Overhead Press</td>
-			<td>Rest</td>
-			<td>Overhead Press</td>
+			<td>Seated Leg Extension</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>Cable Rows</td>
+			<td>Seated Leg Curls</td>
 			<td>Rest</td>
 			<td>Cable Rows</td>
-			<td>Rest</td>
-			<td>Cable Rows</td>
+			<td>Seated Leg Curls</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>Dumbbell Curls</td>
+			<td>Standing Calf Raise</td>
 			<td>Rest</td>
 			<td>Dumbbell Curls</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
+			<td>Standing Calf Raise</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td>Cable Tricep Extension</td>
+			<td>Seated Calf Raise</td>
 			<td>Rest</td>
 			<td>Cable Tricep Extension</td>
-			<td>Rest</td>
-			<td>Cable Tricep Extension</td>
+			<td>Seated Calf Raise</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Dumbbell Lateral Raises</td>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>*Ab workout of Your Choosing*</td>
 			<td>Rest</td>
-			<td>Dumbbell Lateral Raises</td>
-			<td>Rest</td>
-			<td>Dumbbell Lateral Raises</td>
-			<td>Rest</td>
-			<td>Rest</td>
-		</tr>
-
-		<tr>
-			<td>*Ab Workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>*Ab Workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>*Ab Workout of Your Choosing*</td>
+			<td>*Ab workout of Your Choosing*</td>
+			<td>*Ab workout of Your Choosing*</td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
@@ -148,9 +108,9 @@
 	</table>
 </body>
 	<div class="daysplits">
-		<a href="./routines.html" class="btnACTIVE">3-Day Split</a>
-		<a href="./routinesDAY4.html" class="btn">4-Day Split</a>
-		<a href="#" class="btn">6-Day Split</a>
+		<a href="./routines.html" class="btn">3-Day Split</a>
+		<a href="./routinesDAY4.html" class="btnACTIVE">4-Day Split</a>
+		<a href="./routinesDAY6.html" class="btn">6-Day Split</a>
 	</div>
 </html>
 
