--- a/html/routines.html
+++ b/html/routines.html
@@ -150,7 +150,7 @@
 	<div class="daysplits">
 		<a href="./routines.html" class="btnACTIVE">3-Day Split</a>
 		<a href="./routinesDAY4.html" class="btn">4-Day Split</a>
-		<a href="#" class="btn">6-Day Split</a>
+		<a href="./routinesDAY6.html" class="btn">6-Day Split</a>
 	</div>
 </html>
 
