--- a/html/about_us.html
+++ b/html/about_us.html
@@ -12,8 +12,8 @@
 				<img src="../img/logo1.png">
 			</div>
 			<ul>
-				<li class="active"><a href="index.html">Home</a></li>
-				<li><a href="html/about_us.html">About Us</a></li>
+				<li><a href="../index.html">Home</a></li>
+				<li class="active"><a href="html/about_us.html">About Us</a></li>
 			</ul>
 		</div>
 	<div class="meet-team">
