Collaspe and buttons

--- a/html/routines.html
+++ b/html/routines.html
@@ -22,10 +22,11 @@
 
 	<h1>Choose Your Split</h1><br>
 	<p class="intro">Feel free to choose between our 3 day, 4 day, or 6 day workout routine splits</p>
+	<div class="button1">
 		<div class="panel panel-primary accordion"> <!-- Panel (collapasable) -->
 
     		<div class="panel-heading"> <!-- Panel head -->
-       			 <a class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseOne">
+       			 <a class="btn" class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseOne">
           			  3-Day Split
         		</a>           
     		</div> <!-- END Panel head -->
@@ -157,10 +158,13 @@
         		</div> <!-- END Panel body -->
     		</div> <!-- END Collapse section -->
 		</div> 
+		</div>
+
+		<div class="button2">
 	<div class="panel panel-second accordion"> <!-- Panel (collapasable) -->
 
     	<div class="panel-heading"> <!-- Panel head -->
-       		<a class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseTwo">
+       		<a class="btn" class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseTwo">
             	4-Day Split
         	</a>           
     	</div> <!-- END Panel head -->
@@ -252,11 +256,14 @@
             
         	</div> <!-- END Panel body -->
    		</div> <!-- END Collapse section -->
+   	</div>
 	</div> 
+
+	<div class="button3">
 	<div class="panel panel-third accordion"> <!-- Panel (collapasable) -->
 
     	<div class="panel-heading"> <!-- Panel head -->
-        	<a class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseThree">
+        	<a class="btn" class="accordion-toggle" data-toggle="collapse" data-parent=".accordion" href="#collapseThree">
             	6-Day Split
         	</a>           
     	</div> <!-- END Panel head -->
@@ -350,15 +357,12 @@
             
         	</div> <!-- END Panel body -->
     	</div> <!-- END Collapse section -->
+    </div>
 	</div> 
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>	
 </body>
-	<div class="daysplits">
-		<a href="./routines.html" class="btnACTIVE">3-Day Split</a>
-		<a href="./routinesDAY4.html" class="btn">4-Day Split</a>
-		<a href="./routinesDAY6.html" class="btn">6-Day Split</a>
-	</div>
 </html>
 
