Trying to fix 6 day graph

--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -43,7 +43,7 @@
 			<td>Squat</td>
 			<td>Bench Press</td>
 			<td>Pull Ups</td>
-			<td>*Ab Workout of Your Choosing*</td>
+			<td>Rest</td>
 		</tr>
 		<tr>
 			<td>Deadlift</td>
@@ -68,7 +68,7 @@
 		<tr>
 			<td>Seated Leg Curls</td>
 			<td>Cable Tricep Pushdown</td>
-			<td>BLat Pulldowns</td>
+			<td>Lat Pulldowns</td>
 			<td>Seated Leg Curls</td>
 			<td>Cable Tricep Pushdown</td>
 			<td>Lat Pulldowns</td>
@@ -86,7 +86,7 @@
 		</tr>
 
 		<tr>
-			<td>Seated Calf Raise</td>
+			<td>*Ab Workout of Your Choosing*</td>
 			<td>Overhead Cable Tricep Extension</td>
 			<td>Face Pulls</td>
 			<td>Seated Calf Raise</td>
