Added table to Calc Page
Also rounded numbers

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -54,7 +54,7 @@
 				<span class="name">Edmund Wright</span>
 				<span class="border"></span>
 				<p>
-					Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a portion of the HTML.
+					Edmund is a Senior majoring in Computer Networking at Wentworth Institute of Technology. Edmund played a major role in the project by assisting in the CSS and developing a large portion of the HTML that is the backbone of our site.
 				</p>
 			</div>
 
