Fixed 6 day split table

--- a/html/about_us.html
+++ b/html/about_us.html
@@ -13,7 +13,7 @@
 			</div>
 			<ul>
 				<li><a href="../index.html">Home</a></li>
-				<li class="active"><a href="html/about_us.html">About Us</a></li>
+				<li class="active"><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
 	<div class="meet-team">
