--- a/html/routines.html
+++ b/html/routines.html
@@ -272,88 +272,89 @@
         	<div class="panel-body"> <!-- Panel body -->
             
             	<table class="content-table">
-				<thead>
-					<tr>
-						<th>Monday</th>
-						<th>Tuesday</th>
-						<th>Wednesday</th>
-						<th>Thursday</th>
-						<th>Friday</th>
-						<th>Saturday</th>
-						<th>Sunday</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Squat</td>
-						<td>Bench Press</td>
-						<td>Pull Ups</td>
-						<td>Squat</td>
-						<td>Bench Press</td>
-						<td>Pull Ups</td>
-						<td>*Ab Workout of Your Choosing*</td>
-					</tr>
-					<tr>
-						<td>Deadlift</td>
-						<td>Dumbbell Lateral Raise</td>
-						<td>Seated Cable Row</td>
-						<td>Deadlift</td>
-						<td>Dumbbell Lateral Raise</td>
-						<td>Seated Cable Row</td>
-						<td>Rest</td>
-					</tr>
+		<thead>
+			<tr>
+				<th>Monday</th>
+				<th>Tuesday</th>
+				<th>Wednesday</th>
+				<th>Thursday</th>
+				<th>Friday</th>
+				<th>Saturday</th>
+				<th>Sunday</th>
+			</tr>
+		</thead>
+		<tbody>
+		<tr>
+			<td>Squat</td>
+			<td>Bench Press</td>
+			<td>Pull Ups</td>
+			<td>Squat</td>
+			<td>Bench Press</td>
+			<td>Pull Ups</td>
+			<td>Rest</td>
+		</tr>
+			
+		<tr>
+			<td>Deadlift</td>
+			<td>Dumbbell Lateral Raise</td>
+			<td>Seated Cable Row</td>
+			<td>Deadlift</td>
+			<td>Dumbbell Lateral Raise</td>
+			<td>Seated Cable Row</td>
+			<td>Rest</td>
+		</tr>
+			
+		<tr>
+			<td>Seated Leg Extension</td>
+			<td>Over-head Press</td>
+			<td>Barbell Shrugs</td>
+			<td>Seated Leg Extension</td>
+			<td>Over-head Press</td>
+			<td>Barbell Shrugs</td>
+			<td>Rest</td>
+		</tr>
+			
+		<tr>
+			<td>Seated Leg Curl</td>
+			<td>Cable Tricep Pushdown</td>
+			<td>Lat Pulldown</td>
+			<td>Seated Leg Curl</td>
+			<td>Cable Tricep Pushdown</td>
+			<td>Lat Pulldown</td>
+			<td>Rest</td>
+		</tr>
 
-					<tr>
-						<td>Seated Leg Extension</td>
-						<td>Overhead Press</td>
-						<td>Barbell Shrugs</td>
-						<td>Seated Leg Extension </td>
-						<td>Overhead Press</td>
-						<td>Barbell Shrugs</td>
-						<td>Rest</td>
-					</tr>
+		<tr>
+			<td>Standing Calf Raise</td>
+			<td>Incline Bench Press</td>
+			<td>Pendlay Row</td>
+			<td>Standing Calf Raise</td>
+			<td>Incline Bench Press</td>
+			<td>Pendlay Row</td>
+			<td>Rest</td>
+		</tr>
 
-					<tr>
-						<td>Seated Leg Curls</td>
-						<td>Cable Tricep Pushdown</td>
-						<td>BLat Pulldowns</td>
-						<td>Seated Leg Curls</td>
-						<td>Cable Tricep Pushdown</td>
-						<td>Lat Pulldowns</td>
-						<td>Rest</td>
-					</tr>
+		<tr>
+			<td>Seated Calf Raise</td>
+			<td>Over-head Cable Tricep Extension</td>
+			<td>Face Pull</td>
+			<td>Seated Calf Raise</td>
+			<td>Over-head Cable Tricep Extension</td>
+			<td>Face Pull</td>
+			<td>Rest</td>
+		</tr>
 
-					<tr>
-						<td>Standing Calf Raise</td>
-						<td>Incline Bench Press</td>
-						<td>Pendlay Row</td>
-						<td>Standing Calf Raise</td>
-						<td>Incline Bench Press</td>
-						<td>Pendlay Row</td>
-						<td>Rest</td>
-					</tr>
-
-					<tr>
-						<td>Seated Calf Raise</td>
-						<td>Overhead Cable Tricep Extension</td>
-						<td>Face Pulls</td>
-						<td>Seated Calf Raise</td>
-						<td>Overhead Cable Tricep Extension</td>
-						<td>Face Pulls</td>
-						<td>Rest</td>
-					</tr>
-
-					<tr>
-						<td>Rest</td>
-						<td>Rest</td>
-						<td>Dumbbell Curls</td>
-						<td>*Ab Workout of Your Choosing*</td>
-						<td>Rest</td>
-						<td>Dumbbell Curls</td>
-						<td>Rest</td>
-					</tr>
-				</tbody>
-				</table>
+		<tr>
+			<td>*Ab excercise of your choice*</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>Dumbbell Curl</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>Dumbbell Curl</td>
+			<td>Rest</td>
+		</tr>
+	</tbody>
+	</table>
             
         	</div> <!-- END Panel body -->
     	</div> <!-- END Collapse section -->
