--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -45,6 +45,7 @@
 			<td>Pull Ups</td>
 			<td>Rest</td>
 		</tr>
+			
 		<tr>
 			<td>Deadlift</td>
 			<td>Dumbbell Lateral Raise</td>
@@ -54,24 +55,24 @@
 			<td>Seated Cable Row</td>
 			<td>Rest</td>
 		</tr>
-
+			
 		<tr>
 			<td>Seated Leg Extension</td>
-			<td>Overhead Press</td>
+			<td>Over-head Press</td>
 			<td>Barbell Shrugs</td>
-			<td>Seated Leg Extension </td>
-			<td>Overhead Press</td>
+			<td>Seated Leg Extension</td>
+			<td>Over-head Press</td>
 			<td>Barbell Shrugs</td>
 			<td>Rest</td>
 		</tr>
-
+			
 		<tr>
-			<td>Seated Leg Curls</td>
+			<td>Seated Leg Curl</td>
 			<td>Cable Tricep Pushdown</td>
-			<td>Lat Pulldowns</td>
-			<td>Seated Leg Curls</td>
+			<td>Lat Pulldown</td>
+			<td>Seated Leg Curl</td>
 			<td>Cable Tricep Pushdown</td>
-			<td>Lat Pulldowns</td>
+			<td>Lat Pulldown</td>
 			<td>Rest</td>
 		</tr>
 
@@ -86,22 +87,22 @@
 		</tr>
 
 		<tr>
-			<td>*Ab Workout of Your Choosing*</td>
-			<td>Overhead Cable Tricep Extension</td>
-			<td>Face Pulls</td>
 			<td>Seated Calf Raise</td>
-			<td>Overhead Cable Tricep Extension</td>
-			<td>Face Pulls</td>
+			<td>Over-head Cable Tricep Extension</td>
+			<td>Face Pull</td>
+			<td>Seated Calf Raise</td>
+			<td>Over-head Cable Tricep Extension</td>
+			<td>Face Pull</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Rest</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
-			<td>*Ab Workout of Your Choosing*</td>
-			<td>Rest</td>
-			<td>Dumbbell Curls</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>Dumbbell Curl</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>*Ab excercise of your choice*</td>
+			<td>Dumbbell Curl</td>
 			<td>Rest</td>
 		</tr>
 	</tbody>
