Changes to Routine and Calc Pages
removed esti's collaspe shit for now

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -51,9 +51,10 @@
   	
   	<input type="radio" name="gender" class="lab2" value="1" id="genderF">
   	<label for="genderF">Female</label> 
- 	</div class = "text">		 
+ 	</div>		 
   	
   	<!-- Accepts the users age, height, and weight -->
+  	<div class="fillins">
 	<label class = "field">Age:</label> <input type="number" class="age" id="age"><br>
 	<label class = "field">Height in inches:</label> <input type="number" class="height" id="height"><br>
 	<label class = "field">Weight in lbs:</label> <input type="number" class="weight" id="weight"><br>
@@ -67,6 +68,7 @@
 		<option>Intense</option>
 		<option>Athlete</option>
 	</select>
+</div>
 </div>
 
 <!-- Creates the button that allows to submit their information -->	
