--- a/html/about_us.html
+++ b/html/about_us.html
@@ -17,7 +17,7 @@
 			</ul>
 		</div>
 	<div class="meet-team">
-		<h1>Meet The Team</h1>
+		<h1 class="title">Meet The Team</h1>
 		<span class="border"></span>
 			<div class="pics">
 				<a href="#M"><img src="../img/manny.png" alt=""></a>
