--- a/html/routines.html
+++ b/html/routines.html
@@ -37,7 +37,7 @@
 		</thead>
 		<tbody>
 		<tr>
-					<td><a href="../index.html">Squat</a></td>
+					<td><a href="squat.html">Squat</a></td>
 					<td>Rest</td>
 					<td>Squat</td>
 					<td>Rest</td>
