--- a/html/squat.html
+++ b/html/squat.html
@@ -4,10 +4,11 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<title>Beatty Boyz Fitness - Squat</title>
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="../css/css_squat.css">
 </head>
 
 <body>
+	<div class="navbar">
 	<header>
 		<div class="main">
 			<div class="logo">
@@ -18,24 +19,27 @@
 				<li><a href="about_us.html">About Us</a></li>
 			</ul>
 		</div>
-		<h1>The Squat</h1>
-	</header>
+		</header>
+	</div>
 
+		<h1>The Squat</h1>
 	<figure>
 		<h2>Muscle Activation Diagram</h2>
-  		<img src="../img/lifts/squat.jpg">
+		<div class="pic">
+		  		<img src="../img/lifts/squat.jpg">
+		  	</div>
   		<figcaption>Primary Muscles: Quadriceps<br>Secondary Muscles: Glutes, Soleus</figcaption>
 	</figure>
 
-	<h2>Description</h2>
-	<p>The squat is an effective excercise for developing lower body strength. Squatting is a compound movement (a movement that
+	<h3>Description</h3>
+	<p class="desc">The squat is an effective excercise for developing lower body strength. Squatting is a compound movement(a movement that
 	utilizes multiple muscle groups) that uses some of the largest muscles in our body which can cause the feeling of fatigue
 	shortly after performing the excercise. While the movement primarily targets the quadriceps the glutes have also been shown to have
 	a large amount of electromyography (EMG) activation during the movement with the soleus playing a primarily balancing role.</p>
 
 
-	<h2>Instructions</h2>
-	<p>Step 1: Stand with your feet hip-distance apart and with them facing forward and rest the bar on the back of your shoulders
+	<h4>Instructions</h4>
+	<p class="desc1">Step 1: Stand with your feet hip-distance apart and with them facing forward and rest the bar on the back of your shoulders
 	just above your shoulder blades.<br><br>
 
 	Step 2: Brace your core by taking a deep breath into your diaphragm. Begin the movement at your hips through pushing them behind you in
@@ -45,7 +49,9 @@
 	below your knees (referred to as breaking parallel). Once at the lowest point in your squat exhale slowly and push your body weight up while making
 	sure to evenly distribute the pressure across your feet.</p>
 
-	<h2>Demonstration</h2>
+	<h5>Demonstration</h5>
+	<div class="gif">
 	<embed src="https://j.gifs.com/r86BvB.gif" width="400" height="400"></embed>
+</div>
 </body>
 </html>
