Added excercise pages

--- a/html/routines.html
+++ b/html/routines.html
@@ -39,28 +39,28 @@
 		<tr>
 					<td><a href="squat.html">Squat</a></td>
 					<td>Rest</td>
-					<td>Squat</td>
+					<td><a href="squat.html">Squat</a></td>
 					<td>Rest</td>
-					<td>Squat</td>
+					<td><a href="squat.html">Squat</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 				<tr>
-					<td>Deadlift</td>
+					<td><a href="deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
-					<td>Deadlift</td>
+					<td><a href="deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
-					<td>Deadlift</td>
+					<td><a href="deadlift.html">Deadlift</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td>Standing Calf Raise</td>
+					<td><a href="calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
-					<td>Standing Calf Raise</td>
+					<td><a href="calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
-					<td>Standing Calf Raise</td>
+					<td><a href="calfraise.html">Calf Raise</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
@@ -76,21 +76,21 @@
 				</tr>
 
 				<tr>
-					<td>Pull Ups</td>
+					<td><a href="pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
-					<td>Pull Ups</td>
+					<td><a href="pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
-					<td>Pull Ups</td>
+					<td><a href="pullups.html">Pull Ups</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td>Overhead Press</td>
+					<td><a href="overheadpress.html">Overhead Press</a></td>
 					<td>Rest</td>
-					<td>Overhead Press</td>
+					<td><a href="overheadpress.html">Overhead Press</a></td>
 					<td>Rest</td>
-					<td>Overhead Press</td>
+					<td><a href="overheadpress.html">Overhead Press</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
@@ -116,11 +116,11 @@
 				</tr>
 
 				<tr>
-					<td>Cable Tricep Extension</td>
+					<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
 					<td>Rest</td>
-					<td>Cable Tricep Extension</td>
+					<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
 					<td>Rest</td>
-					<td>Cable Tricep Extension</td>
+					<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
