--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -88,10 +88,10 @@
 
 		<tr>
 			<td>Seated Calf Raise</td>
-			<td>Over-head Cable Tricep Extension</td>
+			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
 			<td>Face Pull</td>
 			<td>Seated Calf Raise</td>
-			<td>Over-head Cable Tricep Extension</td>
+			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
 			<td>Face Pull</td>
 			<td>Rest</td>
 		</tr>
