added more excercies

--- a/html/calfraise.html
+++ b/html/calfraise.html
@@ -23,7 +23,7 @@
 
 	<figure>
 		<h2>Muscle Activation Diagram</h2>
-  		<img src="../img/lifts/deadlift.jpg">
+  		<img src="../img/lifts/calfraise.jpg">
   		<figcaption>Primary Muscles: Gastrocnemius,<br>Secondary Muscles: Soleus</figcaption>
 	</figure>
 
