--- a/html/routinesDAY4.html
+++ b/html/routinesDAY4.html
@@ -38,28 +38,28 @@
 		<tbody>
 		<tr>
 			<td>Bench Press</td>
-			<td>Squat</td>
+			<td><a href="squat.html">Squat</a></td>
 			<td>Rest</td>
 			<td>Bench Press</td>
-			<td>Squat</td>
+			<td><a href="squat.html">Squat</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 		<tr>
-			<td>Pull Ups</td>
-			<td>Deadlift</td>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="deadlift.html">Deadlift</a></td>
 			<td>Rest</td>
-			<td>Pull Ups</td>
-			<td>Deadlift</td>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="deadlift.html">Deadlift</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Overhead Press</td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
 			<td>Seated Leg Extension</td>
 			<td>Rest</td>
-			<td>Overhead Press</td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
 			<td>Seated Leg Extension</td>
 			<td>Rest</td>
 			<td>Rest</td>
@@ -77,20 +77,20 @@
 
 		<tr>
 			<td>Dumbbell Curls</td>
-			<td>Standing Calf Raise</td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Rest</td>
 			<td>Dumbbell Curls</td>
-			<td>Standing Calf Raise</td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Cable Tricep Extension</td>
-			<td>Seated Calf Raise</td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td>Rest</td>
-			<td>Cable Tricep Extension</td>
-			<td>Seated Calf Raise</td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
