--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -37,20 +37,20 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td>Squat</td>
+			<td><a href="squat.html">Squat</a></td>
 			<td>Bench Press</td>
-			<td>Pull Ups</td>
-			<td>Squat</td>
+			<td><a href="pullups.html">Pull Ups</a></td>
+			<td><a href="squat.html">Squat</a></td>
 			<td>Bench Press</td>
-			<td>Pull Ups</td>
+			<td><a href="pullups.html">Pull Ups</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Deadlift</td>
+			<td><a href="deadlift.html">Deadlift</a></td>
 			<td>Dumbbell Lateral Raise</td>
 			<td>Seated Cable Row</td>
-			<td>Deadlift</td>
+			<td><a href="deadlift.html">Deadlift</a></td>
 			<td>Dumbbell Lateral Raise</td>
 			<td>Seated Cable Row</td>
 			<td>Rest</td>
@@ -58,39 +58,39 @@
 			
 		<tr>
 			<td>Seated Leg Extension</td>
-			<td>Over-head Press</td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
 			<td>Barbell Shrugs</td>
 			<td>Seated Leg Extension</td>
-			<td>Over-head Press</td>
+			<td><a href="overheadpress.html">Overhead Press</a></td>
 			<td>Barbell Shrugs</td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
 			<td>Seated Leg Curl</td>
-			<td>Cable Tricep Pushdown</td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
 			<td>Lat Pulldown</td>
 			<td>Seated Leg Curl</td>
-			<td>Cable Tricep Pushdown</td>
+			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
 			<td>Lat Pulldown</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Standing Calf Raise</td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Incline Bench Press</td>
 			<td>Pendlay Row</td>
-			<td>Standing Calf Raise</td>
+			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Incline Bench Press</td>
 			<td>Pendlay Row</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Seated Calf Raise</td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
 			<td>Face Pull</td>
-			<td>Seated Calf Raise</td>
+			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
 			<td>Face Pull</td>
 			<td>Rest</td>
