added line in calculator

--- a/html/calculator.html
+++ b/html/calculator.html
@@ -77,43 +77,43 @@
 	<thead>
 		<tr>
 			<th><p class="label">Maintenance Calories:</p></th>
-			<th><p class="label">Cutting Calories:</p></th>
+			<th class="cut"><p class="label">Cutting Calories:</p></th>
 			<th><p class="label">Bulking Calories: </p></th>
 		</tr>
 	</thead>
 	<tr>
 		<td><p class="field" id="baseCals"></p></td>
-		<td><p class="field" id="cuttingCals"></p></td>
+		<td class="cut"><p class="field" id="cuttingCals"></p></td>
 		<td><p class="field" id="bulkingCals"></p></td>
 	</tr>
 	<tr>
 		<td><p class="label">Protein:</p></td>
-		<td><p class="label">Protein:</p></td>
+		<td class="cut"><p class="label">Protein:</p></td>
 		<td><p class="label">Protein:</p></td>
 	</tr>
 	<tr>
 		<td><p class="field" id="baseProtein"></p></td>
-		<td><p class="field" id="cuttingProtein"></td>
+		<td class="cut"><p class="field" id="cuttingProtein"></td>
 		<td><p class="field" id="bulkingProtein"></td>
 	</tr>
 	<tr>
 		<td><p class="label">Fats:</p></td>
-		<td><p class="label">Fats:</p></td>
+		<td class="cut"><p class="label">Fats:</p></td>
 		<td><p class="label">Fats:</p></td>
 	</tr>
 	<tr>
 		<td><p class="field" id="baseFats"></p></td>
-		<td><p class="field" id="cuttingFats"></p></td>
+		<td class="cut"><p class="field" id="cuttingFats"></p></td>
 		<td><p class="field" id="bulkingFats"></p></td>
 	</tr>
 	<tr>
 		<td><p class="label">Carbs:</p></td>
-		<td><p class="label">Carbs:</p></td>
+		<td class="cut"><p class="label">Carbs:</p></td>
 		<td><p class="label">Carbs:</p></td>
 	</tr>
 	<tr>
 		<td><p class="field" id="baseCarbs"></p></td>
-		<td><p class="field" id="cuttingCarbs"></p></td>
+		<td class="cut"><p class="field" id="cuttingCarbs"></p></td>
 		<td><p class="field" id="bulkingCarbs"></p></td>
 	</tr>
 </table>
