--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -78,21 +78,21 @@
 
 		<tr>
 			<td><a href="calfraise.html">Calf Raise</a></td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
+			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="pendlayrow.html">Pendlay Row</a></td>
 			<td><a href="calfraise.html">Calf Raise</a></td>
-			<td>Incline Bench Press</td>
-			<td>Pendlay Row</td>
+			<td><a href="inclinebenchpress.html">Incline Bench Press</a></td>
+			<td><a href="pendlayrow.html">Pendlay Row</a></td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
 			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
-			<td>Face Pull</td>
+			<td><a href="facepull.html">Face Pull</a></td>
 			<td><a href="seatedcalfraise.html">Seated Calf Raise</a></td>
 			<td><a href="ohtricepextension.html">Over-head Cable Tricep Extension</a></td>
-			<td>Face Pull</td>
+			<td><a href="facepull.html">Face Pull</a></td>
 			<td>Rest</td>
 		</tr>
 
