--- a/html/routines.html
+++ b/html/routines.html
@@ -66,11 +66,11 @@
 				</tr>
 
 				<tr>
-					<td>Bench Press</td>
+					<td><a href="benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
-					<td>Bench Press</td>
+					<td><a href="benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
-					<td>Bench Press</td>
+					<td><a href="benchpress.html">Bench Press</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
@@ -96,21 +96,21 @@
 				</tr>
 
 				<tr>
-					<td>Cable Rows</td>
+					<td><a href="cablerows.html">Cable Rows</a></td>
 					<td>Rest</td>
-					<td>Cable Rows</td>
+					<td><a href="cablerows.html">Cable Rows</a></td>
 					<td>Rest</td>
-					<td>Cable Rows</td>
+					<td><a href="cablerows.html">Cable Rows</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
 
 				<tr>
-					<td>Dumbbell Curls</td>
+					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 					<td>Rest</td>
-					<td>Dumbbell Curls</td>
+					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 					<td>Rest</td>
-					<td>Dumbbell Curls</td>
+					<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
@@ -126,11 +126,11 @@
 				</tr>
 
 				<tr>
-					<td>Dumbbell Lateral Raises</td>
+					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
 					<td>Rest</td>
-					<td>Dumbbell Lateral Raises</td>
+					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
 					<td>Rest</td>
-					<td>Dumbbell Lateral Raises</td>
+					<td><a href="dumbbelllateralraise.html">Dumbbell Lateral Raises</a></td>
 					<td>Rest</td>
 					<td>Rest</td>
 				</tr>
