--- a/html/routinesDAY4.html
+++ b/html/routinesDAY4.html
@@ -37,10 +37,10 @@
 		</thead>
 		<tbody>
 		<tr>
-			<td>Bench Press</td>
+			<td><a href="benchpress.html">Bench Press</a></td>
 			<td><a href="squat.html">Squat</a></td>
 			<td>Rest</td>
-			<td>Bench Press</td>
+			<td><a href="benchpress.html">Bench Press</a></td>
 			<td><a href="squat.html">Squat</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
@@ -57,29 +57,29 @@
 
 		<tr>
 			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td>Seated Leg Extension</td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
 			<td>Rest</td>
 			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td>Seated Leg Extension</td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Cable Rows</td>
-			<td>Seated Leg Curls</td>
+			<td><a href="cablerows.html">Cable Rows</a></td>		
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td>Rest</td>
-			<td>Cable Rows</td>
-			<td>Seated Leg Curls</td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
 		</tr>
 
 		<tr>
-			<td>Dumbbell Curls</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Rest</td>
-			<td>Dumbbell Curls</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td><a href="calfraise.html">Calf Raise</a></td>
 			<td>Rest</td>
 			<td>Rest</td>
