--- a/html/routinesDAY6.html
+++ b/html/routinesDAY6.html
@@ -38,41 +38,41 @@
 		<tbody>
 		<tr>
 			<td><a href="squat.html">Squat</a></td>
-			<td>Bench Press</td>
+			<td><a href="benchpress.html">Bench Press</a></td>
 			<td><a href="pullups.html">Pull Ups</a></td>
 			<td><a href="squat.html">Squat</a></td>
-			<td>Bench Press</td>
+			<td><a href="benchpress.html">Bench Press</a></td>
 			<td><a href="pullups.html">Pull Ups</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
 			<td><a href="deadlift.html">Deadlift</a></td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
+			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
 			<td><a href="deadlift.html">Deadlift</a></td>
-			<td>Dumbbell Lateral Raise</td>
-			<td>Seated Cable Row</td>
+			<td><a href="dumbbelllateralrasie.html">Dumbbell Lateral Raise</a></td>
+			<td><a href="cablerows.html">Cable Rows</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Seated Leg Extension</td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
 			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td>Barbell Shrugs</td>
-			<td>Seated Leg Extension</td>
+			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
+			<td><a href="legextension.html">Seated Leg Extension</a></td>
 			<td><a href="overheadpress.html">Overhead Press</a></td>
-			<td>Barbell Shrugs</td>
+			<td><a href="barbellshrugs.html">Barbell Shrugs</a></td>
 			<td>Rest</td>
 		</tr>
 			
 		<tr>
-			<td>Seated Leg Curl</td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td>Lat Pulldown</td>
-			<td>Seated Leg Curl</td>
+			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
+			<td><a href="seatedcalfraise.html">Seated Leg Curls</a></td>
 			<td><a href="tricepextension.html">Cable Tricep Extension</a></td>
-			<td>Lat Pulldown</td>
+			<td><a href="lateralpulldown.html">Lat Pulldowns</a></td>
 			<td>Rest</td>
 		</tr>
 
@@ -99,10 +99,10 @@
 		<tr>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td>Dumbbell Curl</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>*Ab excercise of your choice*</td>
 			<td>*Ab excercise of your choice*</td>
-			<td>Dumbbell Curl</td>
+			<td><a href="dumbbellcurl.html">Dumbbell Curls</a></td>
 			<td>Rest</td>
 		</tr>
 	</tbody>
